fixed main images wrapping

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3,6 +3,7 @@ body {
 }
 #hello-content {
 	padding: 15px 0 0 0;
+	white-space:nowrap;
 }
 #about {
 	z-index:1;
